<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.hf.ui.widget.EasyActionbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actionbar"
        android:background="@color/black"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BASE_GREY">

    <LinearLayout
        android:id="@+id/pLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.eyecool.irissdk_uvc.IrisActivity">

        <FrameLayout
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
             >

            <FrameLayout
                android:id="@+id/fragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/progressCircle"
                android:layout_width="360dp"
                android:layout_height="112dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" />

                <com.eyecool.widget.CustomProgressCircle
                    android:id="@+id/leftEnrollProgress"
                    baseColor="#00ffffff"
                    color="#ff99cc00"
                    radius="40dp"
                    weight="6dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:alpha="0.8" />

                <View
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.0" />

                <com.eyecool.widget.CustomProgressCircle
                    android:id="@+id/rightEnrollProgress"
                    baseColor="#00ffffff"
                    color="#ff99cc00"
                    radius="40dp"
                    weight="6dp"
                    android:layout_width="100dp"
                    android:layout_height="100dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:alpha="0.8" />

                <View
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" />
            </LinearLayout>

        </FrameLayout>
        <TextView
            android:id="@+id/hintTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/infoTv"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_margin="2dp"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/infoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Version:" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quality_score"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/qualityEt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:text="30"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/mirrorSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/hintTv"
                    android:minHeight="48dp"
                    android:text="@string/text_mirror" />

                <Switch
                    android:id="@+id/flipSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/text_flip" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <LinearLayout
                    android:id="@+id/btnLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/enrollBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_margin="2dp"
                        android:text="@string/enroll" />

                    <Button
                        android:id="@+id/verifyBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_margin="2dp"
                        android:text="@string/verify" />

                    <Button
                        android:id="@+id/splitBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_margin="2dp"
                        android:text="@string/text_split" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cameraLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/captureBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_margin="2dp"
                        android:text="@string/capture" />

                    <Button
                        android:id="@+id/acquireImageBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_margin="2dp"
                        android:text="@string/acquire_image" />
                    <Button
                        android:id="@+id/cancelBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_margin="2dp"
                        android:text="@string/cancel" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnLayout"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/openBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_margin="2dp"
                        android:text="@string/open_camera" />

                    <Button
                        android:id="@+id/closeBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_margin="2dp"
                        android:text="@string/close_camera" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnLayout"
                    android:orientation="horizontal">


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>







    </LinearLayout>

</ScrollView>
</LinearLayout>

