<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BASE_BACKGROUND"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <com.hf.ui.widget.EasyActionbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:id="@+id/actionbar"/>

        <TextView
            android:id="@+id/textView_b"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView_v"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="" />

        <EditText
            android:id="@+id/editText_msg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:ems="10"
            android:textColor="@color/black"
            android:inputType="text"
            android:singleLine="false" >

        </EditText>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:background="@color/purple_200"
            android:id="@+id/slot_group"
            android:layout_weight="1">
            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="slot 1"
                android:textSize="@dimen/t_14"
                android:checked="true"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:tag="2"
                android:id="@+id/slot1"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="slot 2"
                android:id="@+id/slot2"
                android:tag="1"
                android:textSize="@dimen/t_14"
                android:layout_height="match_parent"
                android:textColor="@color/black"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button_p1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/ripple_button3"
                    android:text="@string/psam_reset" />

                <Button
                    android:id="@+id/button_off"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ripple_button3"
                    android:text="@string/psam_close" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button_cmd"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/ripple_button1"
                    android:text="@string/psam_apdu" />


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView_s"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="TextView" />

    </LinearLayout>

</RelativeLayout>
